--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
   <meta charset="utf-8">
   <title>GamarraWeb2</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./assets/css/paper-dashboard.css" rel="stylesheet"/>
+    <link href="./assets/css/demo.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+    <link href="./assets/css/themify-icons.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="https://lh3.googleusercontent.com/C4pywFrS-W3QSf__QMHeOSZnDOkR8HKBhBCQYrcvdKg5AnKmvjacorejb0uDUbCNYUrH=s180">
 </head>
 <body>
   <app-root></app-root>
